@@ -27,6 +27,8 @@
 - Change: Removed the XML decoder.
 - Change: Moved the return type retrieval by reflection to the
   more appropriate AbstractDeclaration class.
+- Change: Moved the parameter analysis to the declaration
+  analysis classes.
 
 4.1.4
 - Added support for readonly properties
